--- a/SDL2_Project(Particles)/SDL2_Project(Particles)/SDL2_Project(Particles).vcxproj
+++ b/SDL2_Project(Particles)/SDL2_Project(Particles)/SDL2_Project(Particles).vcxproj
@@ -153,11 +153,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Particle.h" />
     <ClInclude Include="Screen.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Swarm.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Particle.cpp" />
     <ClCompile Include="Screen.cpp" />
     <ClCompile Include="SDL2_Project(Particles).cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -166,6 +169,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Swarm.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
